compilateurMinCaml/tests/typechecking/invalid/call_bad_arg.ml
print_int ();
print_int (789+0)